# statistix

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
src/: statistix.hpp
tests/: TestCase.cpp  TestCase.hpp  main.cpp
